--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
+    "emailjs-com": "^3.2.0",
     "eslint-plugin-prettier": "^3.4.1",
     "prettier": "^2.3.2",
     "react": "^16.13.1",
